--- a/src/components/converter/converter.module.css
+++ b/src/components/converter/converter.module.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10rem 0 5rem 0;
+  padding: 18rem 0 5rem 0;
+  height: 100vh;
   background-color: blanchedalmond;
 }
 
