Update color palette

--- a/src/components/converter/converter.module.css
+++ b/src/components/converter/converter.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 18rem 0 5rem 0;
   height: 100vh;
-  background-color: blanchedalmond;
+  background-color: var(--secondary);
 }
 
 .container input {
@@ -12,6 +12,9 @@
   font-size: 25px;
   border-radius: 20px;
   padding: 5px 10px;
+  background-color: var(--dark);
+  color: var(--main-font);
+  border: 2px solid #112031;
 }
 .container input:focus {
   outline: none;
@@ -22,4 +25,5 @@
   margin: 2rem 0;
   max-width: 250px;
   font-size: 50px;
+  color: var(--main-font);
 }
