--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,6 +1,6 @@
 .container {
   position: absolute;
-  background-color: brown;
+  background-color: var(--main-background);
   border-bottom-left-radius: 200%;
   border-bottom-right-radius: 200%;
   width: 100vw;
@@ -13,13 +13,14 @@
   border-radius: 100%;
   width: 100%;
   height: 200%;
-  background-color: brown;
+  background-color: var(--main-background);
   transform: translate(0%, -25%);
   z-index: -1;
 }
 
 .title {
   text-align: center;
+  color: var(--main-font);
   font-size: 2.5rem;
   padding: 1.5rem 0;
 }
