--- a/src/components/converter/converter.module.css
+++ b/src/components/converter/converter.module.css
@@ -27,3 +27,13 @@
   font-size: 50px;
   color: var(--main-font);
 }
+
+.wrongInput {
+  word-wrap: break-word;
+  text-align: center;
+  line-height: 2rem;
+  margin: 2rem 0;
+  max-width: 250px;
+  font-size: 25px;
+  color: var(--main-font);
+}
